--- a/vercel.json
+++ b/vercel.json
@@ -6,5 +6,8 @@
       "config": { "distDir": "client/dist" }
     }
   ],
-  "routes": [{ "src": "/(.*)", "dest": "/index.html" }]
+  "routes": [
+    { "handle": "filesystem" },
+    { "src": "/.*", "dest": "/index.html" }
+  ]
 }
